--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is a version of the default theme that is compressed to conserver space, but still maintain it's attractiveness. As much as I like to default theme, it uses a lot of extra space on padding and big buttons that I would prefer were more optimized.
+This is a compressed version of the default Lucid Lynx theme to conserve space on your desktop, but still maintain it's attractiveness. As much as I like to default theme, it drops a lot of unnecessary space on padding and big buttons.
 
 Installation:
 
